# obs-studio.

libobs/: obs-avc.c
plugins/obs-ffmpeg/: CMakeLists.txt  obs-amf.cpp  obs-ffmpeg-amf.c  obs-ffmpeg.c  texture-amf.cpp
plugins/obs-ffmpeg/data/locale/: en-US.ini
plugins/obs-ffmpeg/obs-amf-test/: CMakeLists.txt
